[build-system]
requires = [
  "setuptools>=61.0",
  "setuptools-scm>=8.0"
]
build-backend = "setuptools.build_meta"

[project]
name = "streamlamp"
dynamic = ["version"]
dependencies = ["requests"]
authors = [
  { name="jhunt" },
]
description = "An adjunct library for serious Streamlit application development"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
classifiers = [
  "Programming Language :: Python :: 3.9",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.urls]
Documentation = "https://github.com/jhunt/streamlamp/blob/main/README.md"
Issues = "https://github.com/jhunt/streamlamp/issues"
Source = "https://github.com/jhunt/streamlamp"

[tool.setuptools_scm]
